Fixed overlaping boxes on resize

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -221,6 +221,7 @@
   }
   #box-two-p {
     margin-left: -1vw;
+    margin-top: 18vw;
   }
   .home-text {
     display: flex;
